--- a/css/spider.css
+++ b/css/spider.css
@@ -1,3 +1,5 @@
+/* comment test */
+
 body {
 	margin: 0;
 	font-family: "helvetica", "arial" , sans-serif;
@@ -76,6 +78,9 @@ footer a{
 
 p.caption {
 	margin-top: 0px;
+	font-size: 11px;
+	font-family:'Open Sans', sans-serif;;
+	font-style: italic;
 
 }
 
