--- a/css/spider.css
+++ b/css/spider.css
@@ -16,10 +16,6 @@ header{
 
 }
 
-h1, h2 {
-	font-family: 'Lato', sans-serif;
-	font-family: 'Open Sans', sans-serif;
-}
 
 header h1 {
 	color: #0a2b4e;
@@ -44,8 +40,8 @@ h2 {
 	font-size: 35px;
 	color: 	#d9e2e7;
 	margin: 40px 0 10px;
-	font-family: 'Open Sans', sans-serif;
-	text-transform: uppercase;
+	font-family: 'Orbitron', sans-serif
+	
 
 }
 
@@ -90,6 +86,25 @@ p {
 
 h1 {
 	text-transform: uppercase;
-	font-family: 'Lato', sans-serif;
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Orbitron', sans-serif;
+}
+
+h1.tittle {
+	font-family: 'Orbitron', sans-serif
+}
+
+main h2 {
+	text-transform: uppercase;
+	font-family: 'Orbitron', sans-serif;
+	}
+
+main p {
+	text-transform: uppercase;
+	font-family: 'Advent Pro', sans-serif;
+	font-family: 'Orbitron', sans-serif;
+}
+
+ol {
+	font-family: 'Advent Pro', sans-serif;
+	font-family: 'Orbitron', sans-serif;
 }
